Explain cmus-syncthing.conf values

--- a/cmus-syncthing.conf
+++ b/cmus-syncthing.conf
@@ -1,7 +1,22 @@
-[Directories]
+# The options in the section below define the environment in which
+# cmus-syncthing operates :
+# - playlists : path to cmus playlist directory (usually
+#   $HOME/.config/playlists)
+# - syncthing : path to the directory the playlists are exported to
+#
+# Both these options are mandatory.
+
+# [Directories]
 # playlists=
 # syncthing=
 
-[Options]
-verbose=True
+
+# The section below contains two options :
+# - verbose : boolean option. If set to False, cmus-syncthing will not write
+#   to stdout
+# - exclude : comma-separated list of playlist names to exclude from the
+#   export process
+
+#[Options]
+# verbose=True
 # exclude=
