--- a/cmus-syncthing.conf
+++ b/cmus-syncthing.conf
@@ -6,16 +6,16 @@
 #
 # Both these options are mandatory.
 
-# [Directories]
+[Directories]
 # playlists=
 # syncthing=
 
 # The section below contains two options :
-# - verbose : boolean option. If set to False, cmus-syncthing will not write
-#   to stdout
+# - verbose : boolean option. If set to False, cmus-syncthing will only show
+#   warnings and critical errors
 # - exclude : comma-separated list of playlist names to exclude from the
 #   export process
 
-#[Options]
+[Options]
 # verbose=True
 # exclude=
